02-html-css-selectors-flexbox/style.css
@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
}

body {
    background-color: #000000;
    color: #F6F6F6;
    height: 100vh;
    box-sizing: border-box;
}

.titulo-destaque {
    color: #22D4FD;
}

.presentation {
    display: flex;
    align-items: center;
    margin: 10%;
    justify-content: space-between;
}

.presentation__content {
    width: 615px;
}

.presentantion__content__title {
    font-size: 36px;
    font-family: "Krona One", sans-serif;
}

.presentation__content__text {
    font-size: 24px;
    font-family: "Montserrat", sans-serif;
}

.presentation__links {
    display: flex;
    justify-content: space-between;
}

.presentation__links__buttons {
    
}

